--- a/views/error.ejs
+++ b/views/error.ejs
@@ -6,8 +6,8 @@
     <title>Error</title>
 </head>
 <body>
-    <h1>Akses tidak valid</h1>
-    <p><%= message %></p>
+    <h1>Akses tidak valid atau username dan password salah</h1>
+    
     <a href="/login">Login</a>
     <a href="/register">Register</a>
 </body>
